# probability-calculator

./: pyproject.toml
.github/workflows/: python-ci.yml
src/probability_calculator/: main.py  prob_calculator.py
tests/: prob_calculator_test.py
